// Copyright 2018 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package appengine.mapper.internal.tasks;

option go_package = "tasks";


// SplitAndLaunch task splits the key range into shards and kicks off processing
// of each individual shard.
//
// Enqueued transactionally when creating a new mapping job.
message SplitAndLaunch {
  int64 job_id = 1;
}


// FanOutShards enqueues a bunch of ProcessShard named tasks (one per shard).
//
// Enqueued transactionally by SplitAndLaunch after it has constructed shards.
message FanOutShards {
  int64 job_id = 1;
}
